Fixed nasty java modules issue